--- a/public_html/public.css
+++ b/public_html/public.css
@@ -6,47 +6,47 @@ html, body{
 body {
     font-size: 16px;
     font-family: Verdana, sans-serif;
-    background: #eee;
+    background: #3b3f74;
 }
 
-.title {
-    display: inline-block;
-    width: 100%;
-    height: 80px;
+header {
+    font-size: 14px;
+    text-align: left;
+    margin-left: 30px;
     color: white;
-    background: #008b8b;
-    margin: 0;
-    line-height: 80px;
+    opacity: 0.8;
 }
 
-ul {
-    display: flex;
-    display: inline-block;
+footer {
+    text-align: center;
+}
+
+.footer_menu {
     width: 100%;
     height: 50px;
-    justify-content: space-around;
-    margin: 10px 0;
-    padding: 0;
+    position: fixed;
+    bottom: 0;
+    background: rgba(78, 83, 153, 0.8);
+    display: flex;
+    
 }
 
-li {
-    list-style: none;
-    display: inline-block;
-    width: 30%;
+.menu_item {
+    width: 20%;
     height: 100%;
-    border: #00b3b3 3px solid;
-    line-height: 50px;
-    margin: 0;
-    font-weight: bold;
-    background: white;
+    box-sizing: border-box;
+    padding: 10px;
 }
 
-li a{
-    text-decoration: none;
-    color: #00b3b3;
+.menu_item img{
+    height: 100%;
+    opacity: 0.5;
 }
 
-.active {
-    background: #00b3b3;
-    color: white;
+.menu_ticket {
+    transform: rotateZ(315deg);
+}
+
+.menu_now img{
+    opacity: 1;
 }
