--- a/public_html/styles.css
+++ b/public_html/styles.css
@@ -1,62 +1,89 @@
 body {
-  font-size: 16px;
-  font-family: Verdana, sans-serif;
+    font-size: 16px;
+    font-family: Verdana, sans-serif;
+    background: #3b3f74;
 }
 
 #container {
-  width: 280px;
-  margin: 30px auto;
+    width: 300px;
+    margin: 30px auto;
+    border-radius: 10px;
+    background: rgba(255, 255, 255, 0.8);
+    padding: 10px 0;
+    text-align: center;
 }
 
-form {
-  text-align: center;
+.log {
+    text-align: center;
+    width: 100%;
+    height: auto;
+    margin: 50px auto;
 }
 
 form#logout {
-  text-align: right;
-  font-size: 12px;
-  margin-bottom: 15px;
+    text-align: right;
+    font-size: 12px;
+    margin-bottom: 15px;
+}
+
+input:focus {
+    outline: none;
 }
 
 input[type=text],
 input[type=password] {
-  padding: 5px;
-  border-radius: 4px;
-  font-size: 14px;
+    padding: 5px;
+    border-radius: 4px;
+    font-size: 14px;
+    border-top: 2px solid #a0a0a0;
+    border-left: 2px solid #a0a0a0;
+    border-bottom: 2px solid #eee;
+    border-right: 2px solid #eee;
+    background: #e0e0e0;
+    margin: 0 auto;
+    width: 60%;
 }
 
 .btn {
-  width: 100px;
-  padding: 7px;
-  border-radius: 5px;
-  color: #fff;
-  background: #00aaff;
-  box-shadow: 0 3px 0 #0088cc;
-  cursor: pointer;
-  margin: 0 auto 15px;
+    width: 100px;
+    padding: 7px;
+    border-radius: 5px;
+    color: #fff;
+    background: #e95464;
+    box-shadow: 0 3px 0 #cc4956;
+    cursor: pointer;
+    margin: 0 auto 15px;
 }
 
 .btn:hover {
-  opacity: 0.8;
+    opacity: 0.8;
 }
 
 .fs12 {
-  font-size: 12px;
-  font-weight: normal;
+    font-size: 12px;
+    font-weight: normal;
 }
 
 .err {
-  color: #ff3d00;
-  font-weight: bold;
-  font-size: 13px;
+    color: #ff3d00;
+    font-weight: bold;
+    font-size: 13px;
 }
 
 h1 {
-  font-size: 16px;
-  border-bottom: 1px solid #ccc;
-  padding-bottom: 5px;
+    font-size: 16px;
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 5px;
 }
 
 ul > li {
-  padding: 3px 0;
+    padding: 3px 0;
+}
+
+.card_id {
+    width: 60%;
+    display: flex;
+    margin-left: auto; 
+    margin-right: auto; 
+
 }
